[package]
name = "nature_retry"
version = "0.0.1"
authors = ["XueBin Li"]

[dependencies]
nature_common = {path = "../Nature-Common"}
nature_db = {path = "../Nature-DB"}

chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.0"
serde_json = "1.0"
serde = "1.0"
reqwest = "0.9.3"

# log
log = "0.4.1"
fern = "0.5"        # Simple, efficient logging

#config
dotenv = "0.11"

#[dev-dependencies]
# webup
rocket = "0.4"
rocket_contrib = "0.4"



