[package]
name = "nature_retry"
version = "0.11.0"
authors = ["XueBin Li <llxxbb@yeah.net>"]
edition = "2018"
workspace = "../Nature"

description = "Retry the failed tasks for Nature"
repository = "https://github.com/llxxbb/Nature-Retry"
license = "MIT"

[dependencies]
nature_common = {path = "../Nature-Common", version = "0.11.0"}
nature_db = {path = "../Nature-DB", features = ["mysql"], version = "0.11.0"}

chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.0"
serde_json = "1.0"
serde = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

# log
log = "0.4"
fern = "0.6"        # Simple, efficient logging

#config
dotenv = "0.15"




